--- a/python/logging.ini
+++ b/python/logging.ini
@@ -8,8 +8,8 @@ keys = console
 keys = simple
 
 [logger_root]
-; level = INFO
-level = DEBUG
+level = INFO
+; level = DEBUG
 handlers = console
 
 [logger_boto]
