create python Dockerfile + get it running in Docker container with bash script run.sh

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,2 +1,8 @@
 format:
 	fd "py$$" | xargs black
+
+build: 
+    docker build --rm -t aws-tools-python:1.0 .
+
+run:
+    docker run -it --rm aws-tools-python:1.0
