--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -5,7 +5,7 @@ ENV PIP_DISABLE_PIP_VERSION_CHECK=on
 RUN pip install poetry
 
 WORKDIR /app
-COPY python/poetry.lock python/pyproject.toml /app/
+COPY poetry.lock pyproject.toml /app/
 
 RUN poetry config virtualenvs.create false
 RUN poetry install --no-interaction
