--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,8 +7,10 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 boto3 = "^1.14.18"
+tabulate = "^0.8.7"
 
 [tool.poetry.dev-dependencies]
+bpython = "^0.19"
 
 [build-system]
 requires = ["poetry>=0.12"]
