--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 boto3 = "^1.14.18"
 tabulate = "^0.8.7"
+pytz = "^2020.1"
+pandas = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 bpython = "^0.19"
